--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     </div>
   </div>
   
+  <script src="/socket.io/socket.io.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
